# Axum-sqlx-API

./: Cargo.toml  readme.md
migrations/: 20240411212007_user.sql  20240412123754_password_hash-to-password.sql
src/: main.rs
