[package]
name = "sqlx-test-drive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
dotenv = "0.15.0"
serde = "1.0.197"
serde_json = "1.0.115"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio", "uuid"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }
